--- a/README
+++ b/README
@@ -11,7 +11,7 @@ SEAS login:
 Full name: Jordan Hochman
 SEAS login: jhawkman
 
-Full name: Kunli Zhang Gaytan
+Full name: Kunli Zhang
 SEAS login: 
 
 
